[package]
name = "vim-zellij-navigator"
version = "0.1.1"
authors = ["Ruben Hias"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#specifying-dependencies-from-git-repositories
zellij-tile = { git = "https://github.com/zellij-org/zellij.git", branch = 'main' }
chrono = "0.4.19"
